@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v3.9.3.html">v3.9.3</a></td>
+      <td><a href="v3.9.4.html">v3.9.4</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
