@@ -1,0 +1,125 @@
+<HTML>
+<HEAD>
+<TITLE>
+	Changes in TIFF v3.9.4
+</TITLE>
+</HEAD>
+
+<BODY BGCOLOR=white>
+<FONT FACE="Helvetica, Arial, Sans">
+<FONT FACE="Helvetica, Arial, Sans"> 
+
+<BASEFONT SIZE=4>
+<B><FONT SIZE=+3>T</FONT>IFF <FONT SIZE=+2>C</FONT>HANGE <FONT SIZE=+2>I</FONT>NFORMATION</B>
+<BASEFONT SIZE=3>
+
+<UL>
+<HR SIZE=4 WIDTH=65% ALIGN=left>
+<B>Current Version</B>: v3.9.4<BR>
+<B>Previous Version</B>: <A HREF=v3.9.3.html>v3.9.3</a><BR>
+<B>Master FTP Site</B>: <A HREF="ftp://ftp.remotesensing.org/pub/libtiff">
+ftp.remotesensing.org</a>, directory pub/libtiff</A><BR>
+<B>Master HTTP Site</B>: <A HREF="http://www.remotesensing.org/libtiff">
+http://www.remotesensing.org/libtiff</a> 
+<HR SIZE=4 WIDTH=65% ALIGN=left>
+</UL>
+
+<P>
+This document describes the changes made to the software between the
+<I>previous</I> and <I>current</I> versions (see above).  If you don't
+find something listed here, then it was not done in this timeframe, or
+it was not considered important enough to be mentioned.  The following
+information is located here:
+<UL>
+<LI><A HREF="#hightlights">Major Changes</A>
+<LI><A HREF="#configure">Changes in the software configuration</A>
+<LI><A HREF="#libtiff">Changes in libtiff</A>
+<LI><A HREF="#tools">Changes in the tools</A>
+<LI><A HREF="#contrib">Changes in the contrib area</A>
+</UL>
+<p> 
+<P><HR WIDTH=65% ALIGN=left>
+
+<!--------------------------------------------------------------------------->
+
+<A NAME="highlights"><B><FONT SIZE=+3>M</FONT>AJOR CHANGES:</B></A>
+
+<UL>
+
+	<li> Complete the fixes for CVE-2009-2347.
+
+        <li> Tiffcrop now supports custom page sizes.
+
+</UL>
+
+
+<P><HR WIDTH=65% ALIGN=left>
+<!--------------------------------------------------------------------------->
+
+<A NAME="configure"><B><FONT SIZE=+3>C</FONT>HANGES IN THE SOFTWARE CONFIGURATION:</B></A>
+
+<UL>
+
+	<li> None.
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<!--------------------------------------------------------------------------->
+
+<A NAME="libtiff"><B><FONT SIZE=+3>C</FONT>HANGES IN LIBTIFF:</B></A>
+
+<UL>
+	<li> Fixed inadequate validation of the SubjectDistance field.
+
+	<li> Fixed bad handling of out of order tags definated late by
+	a codec.
+
+	<li> Avoid re-preparing jpeg tables unnecessarily.
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<!-------------------------------------------------------------------------->
+	
+<A NAME="tools"><B><FONT SIZE=+3>C</FONT>HANGES IN THE TOOLS:</B></A>
+
+<UL>
+
+        <li> tiffcrop: Added an option to allow the user to specify a
+        custom page size on the command line.  Fix the case where a
+        page size specified with a fractional part was being coerced
+        to an integer by retyping the variables that define the paper
+        size.  Corrected European page size dimensions.
+
+        <li> tiff2rgba: Completed fixes for "CVE-2009-2347 libtiff:
+        integer overflows in various inter-color space conversion
+        tools". http://bugzilla.maptools.org/show_bug.cgi?id=2079
+
+        <li> tiff2pdf: Fix assorted bugs in tiff2pdf: missing "return"
+        in t2p_read_tiff_size() causes t2p->tiff_datasize to be set entirely
+        wrong for COMPRESSION_JPEG case, resulting in memory stomp if actual
+        size is larger.  Also, there are a bunch of places that try to
+        memset() a malloc'd buffer before checking for malloc failure, which
+        would result in core dump if there actually were a failure.
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<!--------------------------------------------------------------------------->
+
+<A NAME="contrib"><B><FONT SIZE=+3>C</FONT>HANGES IN THE CONTRIB AREA:</B></A>
+
+<UL> 
+
+	<li> None
+
+</UL>
+
+Last updated $Date$.
+
+</BODY>
+</HTML>
